fixed spacing issue

--- a/css/main.css
+++ b/css/main.css
@@ -921,7 +921,7 @@ img {
     padding: 20px 20px;
     background-color:white;
     margin-top:-5px;
-    height:130px;
+    height:140px;
 }
 
 .card-box2 {
